# HuProSO

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
experiments/pretrained_models/id_0384/: config.yaml  model_ckpt_feature_extractor.pt
experiments/pretrained_models/id_0410/: config.yaml  model_ckpt_feature_extractor.pt
experiments/pretrained_models/id_0510/: config.yaml  model_ckpt_feature_extractor.pt  permute_dims.pt
experiments/pretrained_models/id_0900/: config.yaml
explore/: evaluate.ipynb
scripts/: train_ik.py  train_prior.py
scripts/preprocess/: extract_amass_datasets.sh  preprocess_amass_data.sh  preprocess_data.py
src/hp/analysis/: compute_metrics.py  eval_ik_tools.py
src/hp/data/: amass.py  amass_cfg.py  load_amass.py
src/hp/estimators/: simple_mlp.py
src/hp/estimators/rotnorm/flow/: condition.py  flow.py  flow_nd.py  rottrans.py
src/hp/estimators/rotnorm/utils/: sd.py
src/hp/metrics/: similarity_measures.py
src/hp/utils/: rotation_tools.py  saving_tools.py  smpl.py
